2012-10-04  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14648]
	* sysdeps/x86_64/multiarch/init-arch.c (__init_cpu_features):
	Set bit_FMA_Usable if FMA is supported.
	* sysdeps/x86_64/multiarch/init-arch.h (bit_FMA_Usable): New
	macro.
	(bit_FMA4_Usable): Updated.
	(index_FMA_Usable): New macro.
	(CPUID_FMA): Likewise
	(HAS_FMA): Defined with bit_FMA_Usable.

2012-09-28  Andreas Schwab  <schwab@linux-m68k.org>

	[BZ #6530]
	* stdio-common/vfprintf.c (process_string_arg): Revert
	2000-07-22 change.

2012-07-06  Andreas Schwab  <schwab@linux-m68k.org>

	[BZ #14042]
	* sysdeps/powerpc/powerpc32/ppc-mcount.S [SHARED]: Don't use PLT
	for call to __mcount_internal.
	* sysdeps/powerpc/powerpc32/Makefile (sysdep_routines)
	(shared-only-routines) [$(subdir) = gmon]: Add compat-ppc-mcount.
	* sysdeps/powerpc/powerpc32/compat-ppc-mcount.S: New file.

2011-09-28  Jonathan Nieder  <jrnieder@gmail.com>

	* stdio-common/Makefile (tst-sprintf-ENV): Set environment
	for testcase.
	* stdio-common/tst-sprintf.c: Include <locale.h>
	(main): Test sprintf's handling of incomplete multibyte
	characters.

2012-09-25  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14621]
	* posix/glob.c (next_brace_sub): Use size_t instead of unsigned
	int as type of variable DEPTH.
	(glob): Use size_t instead of int as type of variables NEWCOUNT
	and OLD_PATHC.

2012-09-24  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14562]
	* malloc/arena.c (heap_trim): Properly get fencepost and adjust
	new chunk size with MALLOC_ALIGN_MASK.

2012-08-29  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14476]
	* Makefile (install): Also pass LD_SO=$(ld.so-version) to
	scripts/test-installation.pl.
	* scripts/test-installation.pl: Use LD_SO to get $ld_so_name
	and $ld_so_version if it is set.

2012-08-27  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14459]
	* stdlib/strtod_l.c: Include <stdint.h>.
	(NDEBUG): Do not define.
	(round_and_return): Change EXPONENT parameter to type intmax_t.